// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Btn /> should render Btn of type "danger" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #f80000;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #f80000;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #f80000;
  border-color: #f80000;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
  type="danger"
/>
`;

exports[`Test <Btn /> should render Btn of type "highlight" with 100% width 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border: 1px solid #ffffff;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 100%;
}

.c0:hover,
.c0:focus {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #0099cf;
  outline: 0;
}

<button
  className="c0"
  type="outline"
/>
`;

exports[`Test <Btn /> should render Btn of type "secondary" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #0099cf;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0099cf;
  border-color: #0099cf;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
  type="secondary"
/>
`;

exports[`Test <Btn /> should render Btn of type "white" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ffffff;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #0099cf;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0099cf;
  border-color: #0099cf;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
  type="white"
/>
`;

exports[`Test <Btn /> should render Btn with custom rounded corners 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #0099cf;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: 50px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0086b6;
  border-color: #0086b6;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
/>
`;

exports[`Test <Btn /> should render Btn with defaults 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #0099cf;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0086b6;
  border-color: #0086b6;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
/>
`;

exports[`Test <Btn /> should render Btn with props size "large" and type "highlight" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #35A856;
  border: 1px solid #35A856;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 22px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 16px 55px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #2f954c;
  border-color: #2f954c;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
  size="large"
  type="highlight"
/>
`;

exports[`Test <Btn /> should render Btn with props size "small" and "disabled" true 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #c8cccf;
  border: 1px solid #c8cccf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: no-drop;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 8px 30px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 100px;
}

.c0:hover,
.c0:focus {
  background-color: #c8cccf;
  border-color: #c8cccf;
  color: #ffffff;
  outline: 0;
}

<button
  className="c0"
  disabled={true}
  size="small"
/>
`;

exports[`Test <Btn /> should render Btn with styleType of link and type of button 1`] = `
.c0 {
  background-color: transparent;
  border: none;
  box-shadow: none;
  color: #0099cf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  padding: 0;
  outline: 0;
}

.c0:hover,
.c0:focus {
  background-color: transparent;
  color: #0099cf;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  className="c0"
  type="button"
/>
`;

exports[`Test <Btn /> should render Btn with type of link  1`] = `
.c0 {
  background-color: transparent;
  border: none;
  box-shadow: none;
  color: #0099cf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  padding: 0;
  outline: 0;
}

.c0:hover,
.c0:focus {
  background-color: transparent;
  color: #0099cf;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  className="c0"
  type="link"
/>
`;

exports[`Test <BtnLink /> should render BtnLink of type "highlight" with 100% width 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border: 1px solid #ffffff;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 100%;
}

.c0:hover,
.c0:focus {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #0099cf;
  outline: 0;
}

<Component
  className="c0"
  fullWidth={true}
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
  type="outline"
/>
`;

exports[`Test <BtnLink /> should render BtnLink of type "secondary" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #0099cf;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0099cf;
  border-color: #0099cf;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
  type="secondary"
/>
`;

exports[`Test <BtnLink /> should render BtnLink of type "white" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ffffff;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #0099cf;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0099cf;
  border-color: #0099cf;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  type="white"
/>
`;

exports[`Test <BtnLink /> should render BtnLink with custom rounded corners 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #0099cf;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: 50px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0086b6;
  border-color: #0086b6;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  rounded={50}
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
/>
`;

exports[`Test <BtnLink /> should render BtnLink with defaults 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #0099cf;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0086b6;
  border-color: #0086b6;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
/>
`;

exports[`Test <BtnLink /> should render BtnLink with external prop 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #0099cf;
  border: 1px solid #0099cf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #0086b6;
  border-color: #0086b6;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  external={true}
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
/>
`;

exports[`Test <BtnLink /> should render BtnLink with external prop and type of highlight 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #35A856;
  border: 1px solid #35A856;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 12px 40px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #2f954c;
  border-color: #2f954c;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  external={true}
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
  type="highlight"
/>
`;

exports[`Test <BtnLink /> should render BtnLink with props size "large" and type "highlight" 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #35A856;
  border: 1px solid #35A856;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 22px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 16px 55px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 140px;
}

.c0:hover,
.c0:focus {
  background-color: #2f954c;
  border-color: #2f954c;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  size="large"
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
  type="highlight"
/>
`;

exports[`Test <BtnLink /> should render BtnLink with props size "small" and "disabled" true 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  background-color: #c8cccf;
  border: 1px solid #c8cccf;
  border-width: 1px;
  border-radius: undefinedpx;
  box-sizing: border-box;
  color: #ffffff;
  cursor: no-drop;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  outline: 0;
  padding: 8px 30px;
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 100px;
}

.c0:hover,
.c0:focus {
  background-color: #c8cccf;
  border-color: #c8cccf;
  color: #ffffff;
  outline: 0;
}

<Component
  className="c0"
  disabled={true}
  size="small"
  theme={
    Object {
      "base": Object {
        "fontFamily": "\\"proxima-nova\\", \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "fontSize": "14px",
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "breakpoints": Array [
        504,
        671,
        867,
        1050,
        1200,
      ],
      "color": Object {
        "black": "#000000",
        "coral": "#F4364C",
        "darkGrey": "#77838d",
        "green": "#35A856",
        "lightBlue1": "#daf3ff",
        "lightBlue2": "#bfe8f8",
        "lightGreen": "#B4E2C2",
        "lightGrey1": "#d6d6d6",
        "lightGrey2": "#e6e6e6",
        "lightGrey3": "#f6f6f6",
        "lightGrey4": "#c8cccf",
        "lightOrange": "#ffeaca",
        "lightPink": "#f8d7e0",
        "mediumBlue": "#0099cf",
        "mediumGrey": "#979797",
        "orange": "#ffad2f",
        "pink": "#e46185",
        "red": "#f80000",
        "red15": "#fedede",
        "stoneGrey": "#a6adb4",
        "teal": "#06A693",
        "veryDarkBlue": "#1D3141",
        "veryDarkBlue20": "#C8CCCF",
        "veryDarkBlue40": "#9DA5AB",
        "veryDarkBlue60": "#717D87",
        "veryDarkBlue7": "#EEF0F3",
        "veryDarkBlue80": "#4A5A67",
        "white": "#ffffff",
      },
      "maxWidth": "1200px",
      "space": Array [
        5,
        10,
        15,
        20,
        30,
      ],
      "spacing": Object {
        "lg": "28px",
        "md": "18px",
        "sm": "10px",
        "xl": "36px",
        "xs": "5px",
      },
      "typography": Object {
        "caption": Object {
          "desktop": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
          "phone": Object {
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.571rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1rem",
            "lineHeight": "1.571rem",
          },
        },
        "h1": Object {
          "desktop": Object {
            "fontSize": "2.286rem",
            "lineHeight": "2.571rem",
          },
          "phone": Object {
            "fontSize": "1.714rem",
            "fontWeight": 600,
            "lineHeight": "2rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "2rem",
            "lineHeight": "2.429rem",
          },
        },
        "h2": Object {
          "desktop": Object {
            "fontSize": "1.571rem",
            "lineHeight": "1.857rem",
          },
          "phone": Object {
            "fontSize": "1.429rem",
            "fontWeight": 600,
            "lineHeight": "1.714rem",
            "margin": "0 0 18px 0",
          },
          "tablet": Object {
            "fontSize": "1.429rem",
            "lineHeight": "1.714rem",
          },
        },
        "h3": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 700,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
        "intro": Object {
          "desktop": Object {
            "fontSize": "1.357rem",
            "lineHeight": "1.929rem",
          },
          "phone": Object {
            "fontSize": "1.214rem",
            "fontWeight": 300,
            "lineHeight": "1.714rem",
            "margin": "0 0 36px 0",
          },
          "tablet": Object {
            "fontSize": "1.214rem",
            "lineHeight": "1.714rem",
          },
        },
        "p": Object {
          "desktop": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
          "phone": Object {
            "fontSize": "1.143rem",
            "fontWeight": 400,
            "lineHeight": "1.714rem",
            "margin": "0 0 10px 0",
          },
          "tablet": Object {
            "fontSize": "1.143rem",
            "lineHeight": "1.714rem",
          },
        },
      },
    }
  }
  to="test.com"
/>
`;
